<resources>
    <string name="app_name">Flydar</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_phone">Phone</string>
    <string name="flyers">Flyers</string>
    <string name="create">Create an Event:</string>
    <string name="eventTitle">Event Title</string>
    <string name="eventTime">Event Time</string>
    <string name="desc">Description of Event</string>
    <string name="createB">Create</string>
    <string name="stitch_client_app_id">flydar-mxwjp</string>
</resources>
